# manza

./: .eslintrc.js  .gitignore  .prettierrc  CLAUDE.md  Makefile  RELEASE.md  index.html  manza-requirements-spec.md  package.json  tailwind.config.js  test-document.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs.rs  main.rs  watcher.rs
src/__tests__/features/: keyboard-shortcuts.feature.md  settings.feature.md
src/components/Editor/: MarkdownEditor.test.tsx  MarkdownEditor.tsx
src/components/FileExplorer/: ConfirmDialog.tsx  FileContextMenu.tsx  FileDialog.tsx  FileExplorer.dragdrop.test.tsx  FileExplorer.expand.test.tsx  FileExplorer.fileops.test.tsx  FileExplorer.foldercontext.test.tsx  FileExplorer.navigation.test.tsx  FileExplorer.test.tsx  FileExplorer.tsx  index.ts
src/components/Layout/: AppLayout.test.tsx  AppLayout.tsx  ResizablePanes.test.tsx  ResizablePanes.tsx
src/components/Preview/: CodeBlock.tsx  MarkdownPreview.latex.test.tsx  MarkdownPreview.mermaid.test.tsx  MarkdownPreview.syntax.test.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  MermaidDiagram.tsx
src/components/Settings/: SettingsModal.tsx
src/contexts/: SettingsContext.tsx  ThemeContext.tsx
src/contexts/__tests__/: SettingsContext.test.tsx
src/hooks/: useKeyboardShortcuts.ts
src/hooks/__tests__/: useKeyboardShortcuts.test.tsx
src/styles/: index.css
test/: test.md
(+1 files in other folders)
