[package]
name = "manza"
version = "0.1.0"
description = "A lightweight, open-source markdown editor and viewer with beautiful GitHub-style rendering"
authors = ["mrilikecoding"]
license = "MIT"
repository = "https://github.com/mrilikecoding/manza"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-open", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
